recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:3: error: too many arguments for method penDown: ()Unit
    penDown(steps)
           ^